# cloudcode

./: .gitignore  Cargo.toml  README.md  agent.example.toml  hub.example.toml
admin-ui/: index.html
admin-ui/src/: App.tsx
admin-ui/src/components/: Layout.tsx  Logo.tsx
admin-ui/src/lib/: api.ts  format.ts  time.ts
admin-ui/src/pages/: Accounts.tsx  Agents.tsx  Dashboard.tsx  Login.tsx  SessionDetail.tsx  Sessions.tsx  Workspaces.tsx
crates/agent/: Cargo.toml
crates/agent/src/: auth.rs  config.rs  config_schema.rs  credentials.rs  main.rs  name.rs  proxy.rs  pty.rs  refresh.rs  supervise.rs  tunnel.rs  update.rs  ws.rs
crates/agent/src/sandbox/: linux.rs  macos.rs  mod.rs  profile.sb
crates/agent/src/sync/: ignore_filter.rs  mod.rs  push_queue.rs  runtime.rs  watcher.rs
crates/client/: Cargo.toml
crates/client/src/: config_schema.rs  input.rs  main.rs  menu.rs  proto.rs  relay.rs  splash.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: config_sync.rs  lib.rs
crates/hub/: Cargo.toml
crates/hub/src/: config.rs  config_schema.rs  db.rs  main.rs  proxy.rs  pty_proto.rs  pty_session.rs  registry.rs  tunnel.rs  workspaces.rs  ws_handler.rs
crates/hub/src/admin/: api.rs  handlers.rs  mod.rs
crates/hub/src/app/: api.rs
crates/hub/tests/: workspace_sync.rs
docs/: USER_GUIDE.md  architecture.drawio
docs/test-reports/: 2026-05-19-v1.13.0-hub-managed-workspace.html
webterm/: package.json
webterm/src/: App.tsx  index.css
webterm/src/components/: AgentTree.tsx  ConfirmDialog.tsx  SettingsDialog.tsx  Sidebar.tsx  TabBar.tsx  WorkspaceTree.tsx
webterm/src/lib/: api.ts  preferences.ts  tabs.ts  tools.ts  wire.ts
webterm/src/pages/: Workbench.tsx
