[workspace]
resolver = "2"
members = ["crates/hub", "crates/client", "crates/agent", "crates/daemon"]

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
futures = "0.3"
bytes = "1"
argon2 = "0.5"
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
dirs = "5"
dashmap = "6"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
gethostname = "0.5"
whoami = "1"
base64 = "0.22"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
libc = "0.2"
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
unicode-width = "0.1"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
