[package]
name = "cloudcode-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "cloudcode-agent"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
futures.workspace = true
rand.workspace = true
dirs.workspace = true
tokio-tungstenite.workspace = true
gethostname.workspace = true
whoami.workspace = true
uuid.workspace = true
dashmap.workspace = true
rustls.workspace = true
chrono.workspace = true
reqwest.workspace = true
portable-pty = "0.8"
which = "6"
notify.workspace = true
ignore = "0.4"
serde_bytes.workspace = true
sqlx.workspace = true
flate2 = "1"
tar = "0.4"
sha2 = "0.10"
signal-hook = "0.3"
cloudcode-daemon = { path = "../daemon" }

[dev-dependencies]
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc.workspace = true
