[package]
name = "cloudcode-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cloudcode"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
tokio.workspace = true
futures.workspace = true
tokio-tungstenite.workspace = true
rustls.workspace = true
crossterm.workspace = true
ratatui.workspace = true
bytes.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
cloudcode-daemon = { path = "../daemon" }

[target.'cfg(unix)'.dependencies]
libc.workspace = true
