[package]
name = "cloudcode-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
toml_edit.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc.workspace = true
