[package]
name = "cloudcode-hub"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cloudcode-hub"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
reqwest.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
futures.workspace = true
bytes.workspace = true
argon2.workspace = true
rand.workspace = true
chrono.workspace = true
dashmap.workspace = true
base64.workspace = true
cloudcode-daemon = { path = "../daemon" }
