[package]
name = "cloudcode-hub"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "cloudcode-hub"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_bytes.workspace = true
toml.workspace = true
toml_edit.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
futures.workspace = true
bytes.workspace = true
argon2.workspace = true
rand.workspace = true
base64.workspace = true
chrono.workspace = true
dashmap.workspace = true
uuid.workspace = true
sqlx.workspace = true
reqwest.workspace = true
dirs.workspace = true
libc.workspace = true
flate2 = "1"
tar = "0.4"
sha2 = "0.10"
signal-hook = "0.3"
rust-embed = { version = "8", features = ["debug-embed"] }
cloudcode-daemon = { path = "../daemon" }
